2006-02-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/stable.ihtml: mention that MosX is PPC.

2006-02-22  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* site/switch/new-notation.html:
	    - add translation header
	    - change 'tour.html' link to 'tour' (for translation)

	* fr/switch/new-notation.html: new translated page

	* fr/sponsor/options.html: update

2006-02-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* fr/index.html: for fr and nl too.

	* site/index.html: oops. new @@ strings 

2006-02-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: use new @@ strings.

	* scripts/lilypondorg.py: sync with GUB.

	* scripts/format-page.py (branches): support for branches, i.e. @v2.7-mingw-VERSION@

2006-02-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/switch/new-notation.html (href): typo.

	* scripts/format-page.py (grab_gettext4): substitute
	@<platform>-VERSION@ for the download page. This automates version
	numbers for the download page.

	* scripts/lilypondorg.py (Module): import from GUB. 

	* site/images/proportional-fragment.png: new file

	* site/images/lily-in-inkscape.png: new file

	* site/images/haddad-poetik3.png: new file

	* site/images/bach-schenker.png:  new file

	* site/switch/new-notation.html: new file

2006-02-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: 31-2

2006-02-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: note about w98
	freebsd is .30

2006-02-02  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/sponsor/options.html: update translation
	* fr/about/pubs.html: idem

2006-01-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/pubs.html: update LJ urls.

	* site/install/devel.ihtml: announce .30 for FreeBSD too.

2006-01-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/sponsor/options.html (src): add note about cheques

2006-01-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/doneet.html (Module): remove. 
