@@ -1,3 +1,7 @@
+2006-03-05  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
+
+	* fr/switch/new-notation.html: *really* add the page
+
 2006-02-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/install/stable.ihtml: mention that MosX is PPC.
